card project with media queries

--- a/index.html
+++ b/index.html
@@ -8,11 +8,45 @@
 </head>
 <body>
     <header>
-        <h1>Header</h1>
-        <nav><h2>Nav</h2></nav>
+        <h1>Our Staff</h1>
+        <nav>
+            <ul>
+            <li><a href="#profile1">Joe</a></li>
+            <li><a href="#profile2">Matt</a></li>
+            <li><a href="#profile1">Jane</a></li>
+            </ul>
+        </nav>
     </header>
-    <main>
-        <h2>Main</h2>
+    <main class="container">
+        <section id="profile1" class="card">
+            <h3>Coder</h3>
+            <figure>
+                <img src="imgs/profile1-500x500.png" alt="Joe profile pic" width="500" height="500">
+                <figcaption>
+                Joe Coder "I code stuff"
+            </figcaption>
+            </figure>
+        </section>
+
+        <section id="profile2"  class="card">
+            <h3>Designer</h3>
+            <figure>
+                <img src="imgs/profile2-500x500.png" alt="Matt profile pic" width="500" height="500">
+                <figcaption>
+                Matt Designer "I design stuff"
+            </figcaption>
+            </figure>
+        </section>
+
+        <section id="profile3" class="card">
+            <h3>Teacher</h3>
+            <figure>
+                <img src="imgs/profile3-500x500.png" alt="Jane profile pic" width="500" height="500">
+                <figcaption>
+                Jane Dev Rel "I teach stuff"
+            </figcaption>
+            </figure>
+        </section>
     </main>
     <footer>
         <h2>Footer</h2>
