--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
             <li><a href="#profile1">Joe</a></li>
             <li><a href="#profile2">Matt</a></li>
-            <li><a href="#profile1">Jane</a></li>
+            <li><a href="#profile3">Jane</a></li>
             </ul>
         </nav>
     </header>
@@ -23,9 +23,10 @@
             <figure>
                 <img src="imgs/profile1-500x500.png" alt="Joe profile pic" width="500" height="500">
                 <figcaption>
-                Joe Coder "I code stuff"
-            </figcaption>
+                Joe Coder
+                </figcaption>
             </figure>
+            <p><q>I code stuff</q></p>
         </section>
 
         <section id="profile2"  class="card">
@@ -33,9 +34,10 @@
             <figure>
                 <img src="imgs/profile2-500x500.png" alt="Matt profile pic" width="500" height="500">
                 <figcaption>
-                Matt Designer "I design stuff"
+                Matt Designer
             </figcaption>
             </figure>
+            <p><q>I design stuff</q></p>
         </section>
 
         <section id="profile3" class="card">
@@ -43,9 +45,10 @@
             <figure>
                 <img src="imgs/profile3-500x500.png" alt="Jane profile pic" width="500" height="500">
                 <figcaption>
-                Jane Dev Rel "I teach stuff"
+                Jane Dev Rel
             </figcaption>
             </figure>
+            <p><q>I teach stuff</q></p>
         </section>
     </main>
     <footer>
